--- a/docker_compose/app.yaml
+++ b/docker_compose/app.yaml
@@ -5,10 +5,10 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile
-    container_name: main-app
+    container_name: todo-app
     ports:
       - "${API_PORT}:8000"
-    command: "uvicorn --factory application.api.main:create_app --timeout-graceful-shutdown 2 --reload --host 0.0.0.0 --port 8000"
+    command: "uvicorn --factory application.api.main:create_app --reload --host 0.0.0.0 --port 8000"
     env_file:
       - ../.env
     volumes:
