--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.111.0"
 pytest = "^8.2.2"
 faker = "^25.8.0"
 punq = "^0.7.0"
+pydantic-settings = "^2.3.3"
+pyjwt = "^2.8.0"
 
 
 [build-system]
