--- a/docker_compose/app.yaml
+++ b/docker_compose/app.yaml
@@ -6,6 +6,8 @@ services:
       context: ..
       dockerfile: Dockerfile
     container_name: todo-app
+    depends_on:
+      - pg_db
     ports:
       - "${API_PORT}:8000"
     command: "uvicorn --factory application.api.main:create_app --reload --host 0.0.0.0 --port 8000"
@@ -16,6 +18,40 @@ services:
     networks:
       - backend
 
+  pg_db:
+    image: postgres:12.19-alpine3.20
+
+    container_name: db_app
+
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+
+    volumes:
+      - db_volume:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+    ports:
+      - "5432:5432"
+    networks:
+      - backend
+
+  pgadmin:
+    container_name: pgadmin_app
+    image: dpage/pgadmin4
+
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    ports:
+      - "5050:80"
+    networks:
+      - backend
+
 networks:
   backend:
     driver: bridge
+
+volumes:
+  db_volume:
