--- a/docker_compose/app.yaml
+++ b/docker_compose/app.yaml
@@ -8,15 +8,17 @@ services:
     container_name: todo-app
     depends_on:
       - pg_db
+      - kafka
     ports:
       - "${API_PORT}:8000"
-    command: "uvicorn --factory application.api.main:create_app --reload --host 0.0.0.0 --port 8000"
+    command: "uvicorn --factory application.api.main:create_app --timeout-graceful-shutdown 2 --reload --host 0.0.0.0 --port 8000"
     env_file:
       - ../.env
     volumes:
       - ../app/:/app/
     networks:
       - backend
+
 
   pg_db:
     image: postgres:12.19-alpine3.20
@@ -48,6 +50,54 @@ services:
       - "5050:80"
     networks:
       - backend
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: main-zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "22181:2181"
+    networks:
+      - backend
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: main-kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "29092:29092"
+    hostname: kafka
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - backend
+    healthcheck:
+      test: nc -z localhost 29092
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui
+    container_name: kafka-ui
+    ports:
+      - "8090:8080"
+    restart: always
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:29092
+      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
+    links:
+      - kafka
+      - zookeeper
+    networks:
+      - backend
+
 
 networks:
   backend:
